--- a/docker/airflow/requirements.txt
+++ b/docker/airflow/requirements.txt
@@ -1,2 +1,9 @@
 faker
 boto3
+apache-airflow==3.0.6
+apache-airflow-providers-amazon
+apache-airflow-providers-apache-spark
+apache-airflow-providers-postgres==5.10.0
+pyspark==3.5.3
+findspark
+python-dotenv
