--- a/services/orchestration.yaml
+++ b/services/orchestration.yaml
@@ -81,13 +81,11 @@ x-airflow-common:
     - ../mnt/airflow/plugins:/opt/airflow/plugins
     - ../mnt/airflow/python:/opt/python
     - ../mnt/airflow/spark:/opt/spark
-    - conf/.credentials.conf:/opt/airflow/.credentials.conf
+    - ./conf/.credentials.conf:/opt/airflow/.credentials.conf
 
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
-    redis:
-      condition: service_healthy
     postgres:
       condition: service_healthy
   networks:
