fix dockerfile path

--- a/services/processing.yaml
+++ b/services/processing.yaml
@@ -11,7 +11,9 @@ x-common-log-config: &default_config
     start_period: 10s
 
 x-spark-worker-default: &spark_worker_default
-  build: ../docker/spark
+  build:
+    context: ../docker/spark  
+    dockerfile: Dockerfile
   <<: *default_config
   environment:
     - SPARK_MODE=worker
