--- a/services/orchestration.yaml
+++ b/services/orchestration.yaml
@@ -79,8 +79,9 @@ x-airflow-common:
     - ../mnt/airflow/logs:/opt/airflow/logs
     - ../mnt/airflow/config:/opt/airflow/config
     - ../mnt/airflow/plugins:/opt/airflow/plugins
-    - ../mnt/airflow/python:/opt/python
-    - ../mnt/airflow/spark:/opt/spark
+    - ../mnt/python:/opt/airflow/dags/python
+    - ../mnt/spark:/opt/airflow/dags/spark
+    - ./include:/opt/airflow/include
 
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
