--- a/services/conf/.credentials.conf
+++ b/services/conf/.credentials.conf
@@ -3,7 +3,7 @@ MINIO_ROOT_PASSWORD=password
 MINIO_DOMAIN=storage
 MINIO_REGION_NAME=us-east-1
 MINIO_REGION=us-east-1
-ENDPOINT_URL = "http://localhost:9000" 
+S3_ENDPOINT = "http://localhost:9000" 
 
 AWS_ACCESS_KEY_ID=admin
 AWS_SECRET_ACCESS_KEY=password
