--- a/docker/airflow/Dockerfile
+++ b/docker/airflow/Dockerfile
@@ -17,6 +17,10 @@ RUN set -eux; \
 
 WORKDIR /opt
 
+# JARs necessários para acessar o MinIO via Hadoop AWS
+RUN wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar \
+ && wget -P /opt/spark/jars https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar
+
 USER airflow
 
 COPY requirements.txt /requirements.txt
