feat dwh credential

--- a/services/conf/.credentials.conf
+++ b/services/conf/.credentials.conf
@@ -14,3 +14,7 @@ GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
 
 AIRFLOW_UID=50000
+
+POSTGRES_USER=dwh_user
+POSTGRES_PASSWORD=dwh_pass
+POSTGRES_DB=dwh_db
