--- a/docker/airflow/Dockerfile
+++ b/docker/airflow/Dockerfile
@@ -19,7 +19,9 @@ WORKDIR /opt
 
 # JARs necessários para acessar o MinIO via Hadoop AWS
 RUN wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar \
- && wget -P /opt/spark/jars https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar
+ && wget -P /opt/spark/jars https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar \
+ && wget -P /opt/spark/jars https://repo1.maven.org/maven2/org/postgresql/postgresql/42.7.5/postgresql-42.7.5.jar
+
 
 USER airflow
 
